@@ -1,4 +1,4 @@
-<addon id="script.artistslideshow" name="Artist Slideshow" provider-name="pkscout,ronie" version="3.0.1~beta16">
+<addon id="script.artistslideshow" name="Artist Slideshow" provider-name="pkscout,ronie" version="3.1.0">
 	<requires>
 		<import addon="xbmc.python" version="2.26.0" />
 		<import addon="xbmc.addon" version="17.9.0" />
@@ -12,64 +12,24 @@
 	</extension>
 	<extension point="xbmc.addon.metadata">
 		<news>
-v.3.0.1~beta16
-- fixes to eliminate Setting Type Error in Kodi logs
-
-v.3.0.1~beta15
+v.3.1.0
 - In daemon mode you can now change AS settings without having to restart Kodi
-- fix for runaway loop if there is only one image in an artist's slideshow
-
-v.3.0.1~beta14
-- fix for non-images getting added to image list and showing a black screen
-
-v.3.0.1~beta13
-- changed download notification to show even if no images are downloaded
-- fix for theaudiodb.com plugin not downloading all three images for an artist
-
-v.3.0.1~beta12
 - added back option to show notifications when downloading new images
-
-v.3.0.1~beta11
-- updates for some setting retrievals that were still using old method
-- updates for code style consistency
-
-v.3.0.1~beta10
-- updates to logic for waiting and checking for change in music
 - updated service plugins to use https for API calls
-
-v.3.0.1~beta9
-- fix for artist images not changing when using a radio stream
-
-v.3.0.1~beta8
-- fixed issue where slideshow might not start when in daemon mode
-- moved common libraries to lib folder
-- move update image slideshow to images folder
-
-v.3.0.1~beta7
-- fix for slideshow thread starting too early when skin starts AS without any music playing
-
-v.3.0.1~beta6
-- fix for crash when trying to get last fanart number from Kodi Artist Information Folder
-- fix for unicode errors causing cache trimming not to work
-
-v.3.0.1~beta5
-- set slideshow thread to close if no music playing
-- removed slideshow idle sleep time setting (no longer needed)
-
-v.3.0.1~beta4
 - added options to change sleep time for main and slideshow threads
-- fix for property cleaning
-- changed entry point default.py to be less complex
-
-v.3.0.1~beta3
-- further refinements to reduce CPU usage
-- fix for AS taking too long to quit on Kodi exit when in daemon mode
-
-v.3.0.1~beta2
-- fix for high CPU usage when using AS in daemon mode and no music playing
-
-v.3.0.1~beta1
+- set slideshow thread to close if no music playing
+- added option to search stream titles more aggressively for an artist name
 - fix for crash if artist image name has an extended character in it
+- fix for crash when trying to get last fanart number from Kodi Artist Information Folder
+- fix for artist images not changing when using a radio stream
+- fix for theaudiodb.com plugin not downloading all three images for an artist
+- fix for unicode errors causing cache trimming not to work
+- fix for non-images getting added to image list and showing a black screen
+- fix for high CPU usage when using AS in daemon mode and no music playing
+- fix for issue where slideshow might not start when in daemon mode
+- fix for runaway loop if there is only one image in an artist's slideshow
+- fix for AS taking too long to quit on Kodi exit when in daemon mode
+- fix for Setting Type Error in Kodi logs
 		</news>
 		<assets>
         	<icon>icon.png</icon>
